--- a/src/templates/pages/index.hbs
+++ b/src/templates/pages/index.hbs
@@ -7,7 +7,9 @@ layout: default.hbs
 
     <section class="halloween-2021-header">
         <div class="halloween-2021__center">
-            <div class="halloween-2021-header__date">26-31 октября</div>
+            <div class="halloween-2021-header__date">
+                26-31 октября
+            </div>
 
             <div class="halloween-2021-header__title">
                 <span>Неделя</span>
@@ -70,28 +72,33 @@ layout: default.hbs
 
             <div class="halloween-2021-program__row">
                 <div class="halloween-2021-program__col">
-                    <div class="halloween-2021-program__image">
-                        <img src="images/halloween-2021/cookie.png" alt="">
-                    </div>
-                    <div class="halloween-2021-program__desc">
-                        <div class="halloween-2021-program__text">
+                    <div class="halloween-2021-program__item">
+                        <div class="halloween-2021-program__image halloween-2021-program__image--l">
+                            <img src="images/halloween-2021/cookie.png" alt="">
+                        </div>
+                        <div class="halloween-2021-program__desc halloween-2021-program__desc--1">
                             <span>КАШМАРНО</span>
                             <span>КУЛИНАРНЫЕ</span> 
                             <span>МАСТЕР-КЛАССЫ</span>
                         </div>
+                    </div>
+                    <div class="halloween-2021-program__btn">
                         <a href="#" class="halloween-2021__btn-green">ЗАПИСАТЬСЯ</a>
                     </div>
+                    
                 </div>
                 <div class="halloween-2021-program__col">
-                    <div class="halloween-2021-program__image">
-                        <img src="images/halloween-2021/diy-toy.png" alt="">
-                    </div>
-                    <div class="halloween-2021-program__desc">
-                        <div class="halloween-2021-program__text">
+                    <div class="halloween-2021-program__item halloween-2021-program__item--flip">
+                        <div class="halloween-2021-program__image halloween-2021-program__image--r">
+                            <img src="images/halloween-2021/diy-toy.png" alt="">
+                        </div>
+                        <div class="halloween-2021-program__desc halloween-2021-program__desc--2">
                             <span>СТРАШНО</span>
                             <span>ТВОРЧЕСКИЕ</span> 
                             <span>ПОДЕЛКИ</span>
                         </div>
+                    </div>
+                    <div class="halloween-2021-program__btn">
                         <a href="#" class="halloween-2021__btn-green">ЗАПИСАТЬСЯ</a>
                     </div>
                 </div>
