--- a/src/templates/pages/index.hbs
+++ b/src/templates/pages/index.hbs
@@ -76,10 +76,17 @@ layout: default.hbs
                         <div class="halloween-2021-program__image halloween-2021-program__image--l">
                             <img src="images/halloween-2021/cookie.png" alt="">
                         </div>
-                        <div class="halloween-2021-program__desc halloween-2021-program__desc--1">
-                            <span>КАШМАРНО</span>
-                            <span>КУЛИНАРНЫЕ</span> 
-                            <span>МАСТЕР-КЛАССЫ</span>
+                        <div class="halloween-2021-program__desc">
+                            <div class="halloween-2021-program__text halloween-2021-program__text--1">
+                                <div>
+                                    <span>КАШМАРНО</span>
+                                    <span>КУЛИНАРНЫЕ</span> 
+                                    <span>МАСТЕР-КЛАССЫ</span>
+                                </div>
+                            </div>
+                            <div class="halloween-2021-program__btn-inside">
+                                <a href="#" class="halloween-2021__btn-green">ЗАПИСАТЬСЯ</a>
+                            </div>
                         </div>
                     </div>
                     <div class="halloween-2021-program__btn">
@@ -92,10 +99,17 @@ layout: default.hbs
                         <div class="halloween-2021-program__image halloween-2021-program__image--r">
                             <img src="images/halloween-2021/diy-toy.png" alt="">
                         </div>
-                        <div class="halloween-2021-program__desc halloween-2021-program__desc--2">
-                            <span>СТРАШНО</span>
-                            <span>ТВОРЧЕСКИЕ</span> 
-                            <span>ПОДЕЛКИ</span>
+                        <div class="halloween-2021-program__desc">
+                            <div class="halloween-2021-program__text halloween-2021-program__text--2">
+                                <div>
+                                    <span>СТРАШНО</span>
+                                    <span>ТВОРЧЕСКИЕ</span> 
+                                    <span>ПОДЕЛКИ</span>
+                                </div>
+                            </div>
+                            <div class="halloween-2021-program__btn-inside">
+                                <a href="#" class="halloween-2021__btn-green">ЗАПИСАТЬСЯ</a>
+                            </div>
                         </div>
                     </div>
                     <div class="halloween-2021-program__btn">
@@ -125,7 +139,7 @@ layout: default.hbs
                     
                 </div>
                 <div class="halloween-2021-when__col-girls">
-                    <img src="images/halloween-2021/girls.png" alt="">
+                    <img src="images/halloween-2021/q-100/girls.png" alt="">
                 </div>
             </div>
 
