--- a/public/css/main.css
+++ b/public/css/main.css
@@ -17,12 +17,9 @@
   unicode-range: U+0020-2074; }
 
 .halloween-2021 {
-  max-width: 1500px;
-  margin: 0 auto;
   font-family: "LeOsler Rough Reg", sans-serif;
   line-height: 1;
-  background: #000 url(../images/halloween-2021/details-bg.png);
-  background-size: 100% auto; }
+  background: #000; }
   .halloween-2021 img {
     max-width: 100%; }
   .halloween-2021 a:after {
@@ -32,19 +29,19 @@
   .halloween-2021__btn-simple {
     display: inline-block;
     padding: 0.3em 1.5em 0.5em 1.5em;
-    border: 2px solid #fff;
+    border: 2px solid #fff !important;
     border-radius: 15px;
     font-size: 20px;
     text-align: center;
-    color: #fff; }
+    color: #fff !important; }
   .halloween-2021__btn-green {
-    display: inline-block;
+    display: block;
     padding: 0.5em 1.15385em 0.69231em 1.15385em;
     background: url(../images/halloween-2021/btn-bg.png) no-repeat;
     background-size: 100% 100%;
     font-size: 26px;
     text-align: center;
-    color: #fff; }
+    color: #fff !important; }
   .halloween-2021-header {
     position: relative;
     height: 450px;
@@ -134,12 +131,14 @@
       color: #fff; }
   .halloween-2021-program {
     margin: 30px 0; }
-    .halloween-2021-program__title span {
-      display: block;
-      font-size: 38px;
-      color: #fff; }
-      .halloween-2021-program__title span:nth-child(1) {
-        color: #89c900; }
+    .halloween-2021-program__title {
+      font-size: 38px; }
+      .halloween-2021-program__title span {
+        display: block;
+        font-size: 1em;
+        color: #fff; }
+        .halloween-2021-program__title span:nth-child(1) {
+          color: #89c900; }
     .halloween-2021-program__col {
       margin-top: 20px; }
     .halloween-2021-program__item {
@@ -156,40 +155,41 @@
         padding-left: 20px; }
     .halloween-2021-program__desc {
       flex: 0 0 auto;
-      width: 50%;
+      width: 50%; }
+    .halloween-2021-program__text {
       font-size: 34px;
       line-height: 0.9;
       color: #91d500; }
-      .halloween-2021-program__desc span {
+      .halloween-2021-program__text span {
         display: block;
         white-space: nowrap; }
-        .halloween-2021-program__desc span:nth-child(1) {
+        .halloween-2021-program__text span:nth-child(1) {
           padding-bottom: 0.15em; }
-        .halloween-2021-program__desc span:nth-child(2) {
+        .halloween-2021-program__text span:nth-child(2) {
           color: #fff; }
-        .halloween-2021-program__desc span:nth-child(n + 2) {
+        .halloween-2021-program__text span:nth-child(n + 2) {
           font-family: "Summer Font"; }
-      .halloween-2021-program__desc--1 span:nth-child(1) {
+      .halloween-2021-program__text--1 span:nth-child(1) {
         font-size: 1em; }
-      .halloween-2021-program__desc--1 span:nth-child(2) {
+      .halloween-2021-program__text--1 span:nth-child(2) {
         font-size: 1.47059em; }
-      .halloween-2021-program__desc--1 span:nth-child(3) {
+      .halloween-2021-program__text--1 span:nth-child(3) {
         font-size: 1.05882em; }
-      .halloween-2021-program__desc--2 span:nth-child(1) {
+      .halloween-2021-program__text--2 span:nth-child(1) {
         font-size: 1.17647em; }
-      .halloween-2021-program__desc--2 span:nth-child(2) {
+      .halloween-2021-program__text--2 span:nth-child(2) {
         font-size: 1.41176em; }
-      .halloween-2021-program__desc--2 span:nth-child(3) {
+      .halloween-2021-program__text--2 span:nth-child(3) {
         font-size: 1.76471em; }
     .halloween-2021-program__btn {
       margin: 15px 15px 0 15px; }
-      .halloween-2021-program__btn .halloween-2021__btn-green {
-        display: block; }
+    .halloween-2021-program__btn-inside {
+      display: none; }
   .halloween-2021-when {
     margin-top: 70px;
     padding-bottom: 30px;
     background: #fff url(../images/halloween-2021/black-curve.png) no-repeat 50% 0;
-    background-size: 100% auto; }
+    background-size: 105% auto; }
     .halloween-2021-when__row {
       display: flex; }
     .halloween-2021-when__col-desc {
@@ -208,6 +208,83 @@
       margin-top: 7px;
       font-size: 21px;
       color: #c30077; }
+      .halloween-2021-when__title span {
+        display: block; }
     .halloween-2021-when__poster {
       margin-top: 15px;
       padding-right: 20px; }
+
+@media (min-width: 768px) {
+  .halloween-2021__center {
+    padding-right: 20px;
+    padding-left: 20px; }
+  .halloween-2021-header {
+    height: 550px;
+    background-position: 50% 0; }
+    .halloween-2021-header__title {
+      position: static;
+      padding-top: 40px; }
+  .halloween-2021-flashmob {
+    margin: 70px 0; }
+    .halloween-2021-flashmob__title {
+      font-size: 40px; }
+    .halloween-2021-flashmob__col-title {
+      width: 25%; }
+    .halloween-2021-flashmob__col-ghost {
+      width: 35%; }
+    .halloween-2021-flashmob__col-desc {
+      width: 40%; }
+  .halloween-2021-program {
+    margin: 70px 0; }
+    .halloween-2021-program__title {
+      font-size: 40px; }
+    .halloween-2021-program__row {
+      display: flex; }
+    .halloween-2021-program__col {
+      flex: 0 0 auto;
+      margin-top: 70px;
+      width: 45%; }
+      .halloween-2021-program__col:last-child {
+        margin-left: 10%; }
+    .halloween-2021-program__item {
+      align-items: flex-start; }
+      .halloween-2021-program__item--flip {
+        flex-direction: row; }
+    .halloween-2021-program__image {
+      padding: 0 30px 0 0;
+      width: 40%; }
+      .halloween-2021-program__image--r {
+        margin-top: -70px; }
+    .halloween-2021-program__desc {
+      width: 60%; }
+    .halloween-2021-program__text {
+      display: flex;
+      justify-content: center;
+      flex-wrap: wrap;
+      min-height: 4em; }
+    .halloween-2021-program__btn {
+      display: none; }
+    .halloween-2021-program__btn-inside {
+      display: block;
+      margin-top: 20px; }
+  .halloween-2021-when {
+    margin-top: 100px; }
+    .halloween-2021-when__col-girls {
+      width: 32%; }
+    .halloween-2021-when__date {
+      padding-top: 40px;
+      font-size: 34px; }
+    .halloween-2021-when__title {
+      margin-top: 15px;
+      font-size: 40px; }
+    .halloween-2021-when__poster {
+      margin-top: 25px;
+      max-width: 45%; } }
+
+@media (min-width: 1100px) {
+  .halloween-2021-header {
+    height: 750px; } }
+
+@media (min-width: 1500px) {
+  .halloween-2021-header {
+    height: 920px; } }
