--- a/public/css/main.css
+++ b/public/css/main.css
@@ -87,10 +87,9 @@
       padding: 10px 0;
       background: linear-gradient(rgba(0, 0, 0, 0), #000 50%); }
       .halloween-2021-header__desc__text {
+        padding-bottom: 0.5em;
         font-size: 30px;
         color: #fff; }
-      .halloween-2021-header__desc__btn {
-        margin-top: 12px; }
   .halloween-2021-flashmob {
     margin: 30px 0; }
     .halloween-2021-flashmob__title {
@@ -122,13 +121,16 @@
         white-space: nowrap;
         font-size: 1em;
         font-family: "Summer Font";
-        color: #fff; }
-        .halloween-2021-flashmob__title-2 span:nth-child(n + 3) {
+        color: #91d500; }
+        .halloween-2021-flashmob__title-2 span:nth-child(n + 4) {
           font-size: 1.31579em;
-          color: #91d500; }
+          color: #fff; }
     .halloween-2021-flashmob__desc {
-      font-size: 21px;
+      font-size: 20px;
       color: #fff; }
+      .halloween-2021-flashmob__desc span {
+        display: block;
+        white-space: nowrap; }
   .halloween-2021-program {
     margin: 30px 0; }
     .halloween-2021-program__title {
@@ -223,7 +225,7 @@
     background-position: 50% 0; }
     .halloween-2021-header__title {
       position: static;
-      padding-top: 40px; }
+      padding-top: 1.5em; }
   .halloween-2021-flashmob {
     margin: 70px 0; }
     .halloween-2021-flashmob__title {
@@ -282,8 +284,17 @@
       max-width: 45%; } }
 
 @media (min-width: 1100px) {
+  .halloween-2021__center {
+    padding-right: 3vw;
+    padding-left: 3vw; }
   .halloween-2021-header {
-    height: 750px; } }
+    height: 750px; }
+    .halloween-2021-header__title {
+      font-size: 3vw; }
+    .halloween-2021-header__desc__text {
+      font-size: 3vw; }
+  .halloween-2021-flashmob__title {
+    font-size: 4vw; } }
 
 @media (min-width: 1500px) {
   .halloween-2021-header {
