--- a/src/templates/pages/index.hbs
+++ b/src/templates/pages/index.hbs
@@ -43,7 +43,8 @@ layout: default.hbs
             <div class="halloween-2021-flashmob__row">
                 <div class="halloween-2021-flashmob__col-title">
                     <div class="halloween-2021-flashmob__title-2">
-                        <span>НАШИ МАЛЕНЬКИЕ</span>
+                        <span>НАШИ </span>
+                        <span>МАЛЕНЬКИЕ</span>
                         <span>ПРИВЕДЕНИЯ</span>
                         <span>ВЫХОДЯТ</span>
                         <span>НА ОХОТУ</span>
