--- a/src/styles/main.scss
+++ b/src/styles/main.scss
@@ -42,7 +42,7 @@
 	}
 
 	&__center {
-		padding: 0 15px;
+		padding: 0 5vw;
 	}
 
 	&__btn-simple {
@@ -50,7 +50,7 @@
 		padding: 6/20 + em 30/20 + em 10/20 + em 30/20 + em;
 		border: 2px solid #fff !important;
 		border-radius: 15px;
-		font-size: 20px;
+		font-size: 6.3vw;
 		text-align: center;
 		color: #fff !important;
 	}
@@ -60,34 +60,42 @@
 		padding: 13/26 + em 30/26 + em 18/26 + em 30/26 + em;
 		background: url(../images/halloween-2021/btn-bg.png) no-repeat;
 		background-size: 100% 100%;
-		font-size: 26px;
+		font-size: 8vw;
 		text-align: center;
 		color: #fff !important;
+
+		&:hover {
+		}
 	}
 
 	&-header {
 		position: relative;
-		height: 450px;
-		background: url(../images/halloween-2021/header.jpeg) no-repeat 37% -40px;
-		background-size: auto 100%;
+
+		&__height {
+			height: 135vw;
+			background: url(../images/halloween-2021/header.jpeg) no-repeat 37%
+				0;
+			background-size: auto 100%;
+		}
 
 		&__date {
 			position: absolute;
 			top: 0;
-			left: 15px;
-			padding: 0.2em 15px 0.8em 15px;
+			left: 5vw;
+			padding: 0.2em 0.35em 0.8em 0.35em;
 			background: url(../images/halloween-2021/date-bg.png) no-repeat;
 			background-size: 100% 100%;
 			font-family: "Summer Font";
-			font-size: 40px;
+			font-size: 13vw;
 			color: #fff;
 		}
 
 		&__title {
-			right: 15px;
-			top: 20px;
+			right: 5vw;
+			top: 0;
 			position: absolute;
-			font-size: 29px;
+			padding-top: 1.3em;
+			font-size: 9vw;
 			text-align: center;
 			color: #fff;
 
@@ -116,17 +124,14 @@
 		}
 
 		&__desc {
-			position: absolute;
-			bottom: 0;
-			left: 0;
-			width: 100%;
 			text-align: center;
-			padding: 10px 0;
+			padding: 3vw 0;
 			background: linear-gradient(rgba(#000, 0), #000 50%);
+			margin-top: -25vw;
 
 			&__text {
 				padding-bottom: 0.5em;
-				font-size: 30px;
+				font-size: 9vw;
 				color: #fff;
 			}
 
@@ -136,10 +141,10 @@
 	}
 
 	&-flashmob {
-		margin: 30px 0;
+		margin: 11vw 0;
 
 		&__title {
-			font-size: 34px;
+			font-size: 9vw;
 			color: #fff;
 
 			span {
@@ -152,7 +157,7 @@
 		}
 
 		&__row {
-			margin-top: 20px;
+			margin-top: 6vw;
 			display: flex;
 			align-items: center;
 			flex-wrap: wrap;
@@ -169,13 +174,13 @@
 		}
 
 		&__col-desc {
-			margin-top: 20px;
+			margin-top: 6vw;
 			flex: 0 0 auto;
 			width: 100%;
 		}
 
 		&__title-2 {
-			font-size: 38px;
+			font-size: 12vw;
 
 			span {
 				display: block;
@@ -192,7 +197,7 @@
 		}
 
 		&__desc {
-			font-size: 20px;
+			font-size: 6vw;
 			color: #fff;
 
 			span {
@@ -203,10 +208,10 @@
 	}
 
 	&-program {
-		margin: 30px 0;
+		margin: 11vw 0;
 
 		&__title {
-			font-size: 38px;
+			font-size: 9vw;
 
 			span {
 				display: block;
@@ -223,7 +228,7 @@
 		}
 
 		&__col {
-			margin-top: 20px;
+			margin-top: 6vw;
 		}
 
 		&__item {
@@ -240,11 +245,11 @@
 			width: 50%;
 
 			&--l {
-				padding-right: 20px;
+				padding-right: 6vw;
 			}
 
 			&--r {
-				padding-left: 20px;
+				padding-left: 6vw;
 			}
 		}
 
@@ -254,7 +259,7 @@
 		}
 
 		&__text {
-			font-size: 34px;
+			font-size: 10.5vw;
 			line-height: 0.9;
 			color: #91d500;
 
@@ -305,17 +310,13 @@
 		}
 
 		&__btn {
-			margin: 15px 15px 0 15px;
-		}
-
-		&__btn-inside {
-			display: none;
+			margin: 5vw 5vw 0 5vw;
 		}
 	}
 
 	&-when {
-		margin-top: 70px;
-		padding-bottom: 30px;
+		margin-top: 25vw;
+		padding-bottom: 10vw;
 		background: #fff url(../images/halloween-2021/black-curve.png) no-repeat
 			50% 0;
 		background-size: 105% auto;
@@ -336,56 +337,67 @@
 		}
 
 		&__date {
-			padding-top: 10px;
-			font-size: 20px;
+			padding-top: 8vw;
+			font-size: 6.3vw;
 			font-family: "Summer Font";
 			color: #c30077;
 		}
 
 		&__title {
-			margin-top: 7px;
-			font-size: 21px;
+			margin-top: 2.5vw;
+			font-size: 6.6vw;
 			color: #c30077;
 
 			span {
 				display: block;
+				white-space: nowrap;
 			}
 		}
 
 		&__poster {
-			margin-top: 15px;
-			padding-right: 20px;
+			margin-top: 4vw;
+			width: 35vw;
 		}
 	}
 }
 
-@media (min-width: 768px) {
+@media (min-width: 1200px) {
 	.halloween-2021 {
 		&__center {
-			padding-right: 20px;
-			padding-left: 20px;
+			padding-right: 3.2vw;
+			padding-left: 3.2vw;
 		}
 
 		&__btn-simple {
+			font-size: 2.2vw;
 		}
 
 		&__btn-green {
+			font-size: 2.7vw;
 		}
 
 		&-header {
-			height: 550px;
-			background-position: 50% 0;
+			&__height {
+				height: 48vw;
+			}
 
 			&__date {
+				left: 3.2vw;
+				font-size: 5.5vw;
 			}
 
 			&__title {
 				position: static;
-				padding-top: 1.5em;
+				padding-top: 0.5em;
+				font-size: 3.5vw;
 			}
 
 			&__desc {
+				margin-top: -9vw;
+
 				&__text {
+					padding-bottom: 0.7em;
+					font-size: 3.8vw;
 				}
 
 				&__btn {
@@ -394,21 +406,22 @@
 		}
 
 		&-flashmob {
-			margin: 70px 0;
+			margin: 4vw 0 0 0;
 
 			&__title {
-				font-size: 40px;
+				font-size: 5vw;
 			}
 
 			&__row {
+				margin-top: 35px;
 			}
 
 			&__col-title {
-				width: 25%;
+				width: 19.3vw;
 			}
 
 			&__col-ghost {
-				width: 35%;
+				width: 26vw;
 			}
 
 			&__col-desc {
@@ -416,17 +429,22 @@
 			}
 
 			&__title-2 {
+				font-size: 5.4vw;
+				line-height: 0.9;
 			}
 
 			&__desc {
+				position: relative;
+				left: -1em;
+				font-size: 2.5vw;
 			}
 		}
 
 		&-program {
-			margin: 70px 0;
+			margin: 7vw 0 0 0;
 
 			&__title {
-				font-size: 40px;
+				font-size: 5vw;
 			}
 
 			&__row {
@@ -435,11 +453,11 @@
 
 			&__col {
 				flex: 0 0 auto;
-				margin-top: 70px;
-				width: 45%;
+				margin-top: 9.5vw;
+				width: 39vw;
 
 				&:last-child {
-					margin-left: 10%;
+					margin-left: auto;
 				}
 			}
 
@@ -452,16 +470,22 @@
 			}
 
 			&__image {
-				padding: 0 30px 0 0;
-				width: 40%;
+				width: 48%;
+				padding: 0;
+
+				&--l {
+					margin-top: -3vw;
+					padding-right: 3vw;
+				}
 
 				&--r {
-					margin-top: -70px;
+					margin-top: -7vw;
+					text-align: right;
 				}
 			}
 
 			&__desc {
-				width: 60%;
+				width: 52%;
 			}
 
 			&__text {
@@ -469,26 +493,23 @@
 				justify-content: center;
 				flex-wrap: wrap;
 				min-height: 4em;
+				font-size: 3.9vw;
 
 				&--1 {
 				}
 
 				&--2 {
+					font-size: 3.3vw;
 				}
 			}
 
 			&__btn {
-				display: none;
-			}
-
-			&__btn-inside {
-				display: block;
-				margin-top: 20px;
+				margin: 0 0 0 48%;
 			}
 		}
 
 		&-when {
-			margin-top: 100px;
+			margin-top: 15vw;
 
 			&__row {
 			}
@@ -501,241 +522,18 @@
 			}
 
 			&__date {
-				padding-top: 40px;
-				font-size: 34px;
+				padding-top: 1.6vw;
+				font-size: 4.7vw;
 			}
 
 			&__title {
-				margin-top: 15px;
-				font-size: 40px;
+				margin-top: 1.1vw;
+				font-size: 5vw;
 			}
 
 			&__poster {
-				margin-top: 25px;
-				max-width: 45%;
-			}
-		}
-	}
-}
-
-@media (min-width: 1100px) {
-	.halloween-2021 {
-		&__center {
-			padding-right: 3vw;
-			padding-left: 3vw;
-		}
-
-		&__btn-simple {
-		}
-
-		&__btn-green {
-		}
-
-		&-header {
-			height: 750px;
-
-			&__date {
-			}
-
-			&__title {
-				font-size: 3vw;
-			}
-
-			&__desc {
-				&__text {
-					font-size: 3vw;
-				}
-
-				&__btn {
-				}
-			}
-		}
-
-		&-flashmob {
-			&__title {
-				font-size: 4vw;
-			}
-
-			&__row {
-			}
-
-			&__col-title {
-			}
-
-			&__col-ghost {
-			}
-
-			&__col-desc {
-			}
-
-			&__title-2 {
-			}
-
-			&__desc {
-			}
-		}
-
-		&-program {
-			&__title {
-			}
-
-			&__row {
-			}
-
-			&__col {
-			}
-
-			&__item {
-				&--flip {
-				}
-			}
-
-			&__image {
-				&--l {
-				}
-
-				&--r {
-				}
-			}
-
-			&__desc {
-				&--1 {
-				}
-
-				&--2 {
-				}
-			}
-
-			&__btn {
-			}
-		}
-
-		&-when {
-			&__row {
-			}
-
-			&__col-desc {
-			}
-
-			&__col-girls {
-			}
-
-			&__date {
-			}
-
-			&__title {
-			}
-
-			&__poster {
-			}
-		}
-	}
-}
-
-@media (min-width: 1500px) {
-	.halloween-2021 {
-		&__center {
-		}
-
-		&__btn-simple {
-		}
-
-		&__btn-green {
-		}
-
-		&-header {
-			height: 920px;
-
-			&__date {
-			}
-
-			&__title {
-			}
-
-			&__desc {
-				&__text {
-				}
-
-				&__btn {
-				}
-			}
-		}
-
-		&-flashmob {
-			&__title {
-			}
-
-			&__row {
-			}
-
-			&__col-title {
-			}
-
-			&__col-ghost {
-			}
-
-			&__col-desc {
-			}
-
-			&__title-2 {
-			}
-
-			&__desc {
-			}
-		}
-
-		&-program {
-			&__title {
-			}
-
-			&__row {
-			}
-
-			&__col {
-			}
-
-			&__item {
-				&--flip {
-				}
-			}
-
-			&__image {
-				&--l {
-				}
-
-				&--r {
-				}
-			}
-
-			&__desc {
-				&--1 {
-				}
-
-				&--2 {
-				}
-			}
-
-			&__btn {
-			}
-		}
-
-		&-when {
-			&__row {
-			}
-
-			&__col-desc {
-			}
-
-			&__col-girls {
-			}
-
-			&__date {
-			}
-
-			&__title {
-			}
-
-			&__poster {
+				margin-top: 3.6vw;
+				width: 26vw;
 			}
 		}
 	}
