--- a/public/css/main.css
+++ b/public/css/main.css
@@ -17,9 +17,14 @@
   unicode-range: U+0020-2074; }
 
 .halloween-2021 {
+  position: relative;
   font-family: "LeOsler Rough Reg", sans-serif;
   line-height: 1;
-  background: #000; }
+  background: #000;
+  background-repeat: no-repeat;
+  background-image: url(../images/halloween-2021/details-bg-mobile.png);
+  background-position: 0 152vw;
+  background-size: 91% auto; }
   .halloween-2021 img {
     max-width: 100%; }
   .halloween-2021 a:after {
@@ -215,93 +220,100 @@
       width: 35vw; }
 
 @media (min-width: 1200px) {
-  .halloween-2021__center {
-    padding-right: 3.2vw;
-    padding-left: 3.2vw; }
-  .halloween-2021__btn-simple {
-    font-size: 2.2vw; }
-  .halloween-2021__btn-green {
-    font-size: 2.7vw; }
-  .halloween-2021-header__height {
-    height: 48vw; }
-  .halloween-2021-header__date {
-    left: 3.2vw;
-    font-size: 5.5vw; }
-  .halloween-2021-header__title {
-    position: static;
-    padding-top: 0.5em;
-    font-size: 3.5vw; }
-  .halloween-2021-header__desc {
-    margin-top: -9vw; }
-    .halloween-2021-header__desc__text {
-      padding-bottom: 0.7em;
-      font-size: 3.8vw; }
-  .halloween-2021-flashmob {
-    margin: 4vw 0 0 0; }
-    .halloween-2021-flashmob__title {
-      font-size: 5vw; }
-    .halloween-2021-flashmob__row {
-      margin-top: 35px; }
-    .halloween-2021-flashmob__col-title {
-      width: 19.3vw; }
-    .halloween-2021-flashmob__col-ghost {
-      width: 26vw; }
-    .halloween-2021-flashmob__col-desc {
-      width: 40%; }
-    .halloween-2021-flashmob__title-2 {
-      font-size: 5.4vw;
-      line-height: 0.9; }
-    .halloween-2021-flashmob__desc {
-      position: relative;
-      left: -1em;
-      font-size: 2.5vw; }
-  .halloween-2021-program {
-    margin: 7vw 0 0 0; }
-    .halloween-2021-program__title {
-      font-size: 5vw; }
-    .halloween-2021-program__row {
-      display: flex; }
-    .halloween-2021-program__col {
-      flex: 0 0 auto;
-      margin-top: 9.5vw;
-      width: 39vw; }
-      .halloween-2021-program__col:last-child {
-        margin-left: auto; }
-    .halloween-2021-program__item {
-      align-items: flex-start; }
-      .halloween-2021-program__item--flip {
-        flex-direction: row; }
-    .halloween-2021-program__image {
-      width: 48%;
-      padding: 0; }
-      .halloween-2021-program__image--l {
-        margin-top: -3vw;
-        padding-right: 3vw; }
-      .halloween-2021-program__image--r {
-        margin-top: -7vw;
-        text-align: right; }
-    .halloween-2021-program__desc {
-      width: 52%; }
-    .halloween-2021-program__text {
-      display: flex;
-      justify-content: center;
-      flex-wrap: wrap;
-      min-height: 4em;
-      font-size: 3.9vw; }
-      .halloween-2021-program__text--2 {
-        font-size: 3.3vw; }
-    .halloween-2021-program__btn {
-      margin: 0 0 0 48%; }
-  .halloween-2021-when {
-    margin-top: 15vw; }
-    .halloween-2021-when__col-girls {
-      width: 32%; }
-    .halloween-2021-when__date {
-      padding-top: 1.6vw;
-      font-size: 4.7vw; }
-    .halloween-2021-when__title {
-      margin-top: 1.1vw;
-      font-size: 5vw; }
-    .halloween-2021-when__poster {
-      margin-top: 3.6vw;
-      width: 26vw; } }
+  .halloween-2021 {
+    background-image: url(../images/halloween-2021/details-bg.png);
+    background-position: 0% 55vw;
+    background-size: 93% auto; }
+    .halloween-2021__center {
+      padding-right: 3.2vw;
+      padding-left: 3.2vw; }
+    .halloween-2021__btn-simple {
+      font-size: 2.2vw; }
+    .halloween-2021__btn-green {
+      font-size: 2.7vw; }
+    .halloween-2021-header__height {
+      height: 48vw; }
+    .halloween-2021-header__date {
+      left: 3.2vw;
+      font-size: 5.5vw; }
+    .halloween-2021-header__title {
+      position: static;
+      padding-top: 0.5em;
+      font-size: 3.5vw; }
+    .halloween-2021-header__desc {
+      margin-top: -9vw; }
+      .halloween-2021-header__desc__text {
+        padding-bottom: 0.7em;
+        font-size: 3.8vw; }
+    .halloween-2021-flashmob {
+      margin: 4vw 0 0 0; }
+      .halloween-2021-flashmob__title {
+        font-size: 5vw; }
+      .halloween-2021-flashmob__row {
+        margin-top: 35px; }
+      .halloween-2021-flashmob__col-title {
+        width: 19.3vw; }
+      .halloween-2021-flashmob__col-ghost {
+        width: 26vw; }
+      .halloween-2021-flashmob__col-desc {
+        width: 40%; }
+      .halloween-2021-flashmob__title-2 {
+        font-size: 5.4vw;
+        line-height: 0.9; }
+      .halloween-2021-flashmob__desc {
+        position: relative;
+        left: -1em;
+        font-size: 2.5vw; }
+    .halloween-2021-program {
+      margin: 7vw 0 0 0; }
+      .halloween-2021-program__title {
+        font-size: 5vw; }
+      .halloween-2021-program__row {
+        display: flex; }
+      .halloween-2021-program__col {
+        flex: 0 0 auto;
+        margin-top: 9.5vw;
+        width: 39vw; }
+        .halloween-2021-program__col:last-child {
+          margin-left: auto; }
+      .halloween-2021-program__item {
+        align-items: flex-start; }
+        .halloween-2021-program__item--flip {
+          flex-direction: row; }
+      .halloween-2021-program__image {
+        width: 48%;
+        padding: 0; }
+        .halloween-2021-program__image--l {
+          margin-top: -3vw; }
+          .halloween-2021-program__image--l img {
+            width: 15vw; }
+        .halloween-2021-program__image--r {
+          margin-top: -7vw;
+          text-align: right; }
+          .halloween-2021-program__image--r img {
+            width: 13vw; }
+      .halloween-2021-program__desc {
+        width: 52%; }
+      .halloween-2021-program__text {
+        display: flex;
+        justify-content: center;
+        flex-wrap: wrap;
+        min-height: 4em;
+        font-size: 3.9vw; }
+        .halloween-2021-program__text--2 {
+          font-size: 3.3vw; }
+      .halloween-2021-program__btn {
+        margin: 0 0 0 48%; }
+    .halloween-2021-when {
+      margin-top: 15vw; }
+      .halloween-2021-when__col-girls {
+        width: 32%; }
+      .halloween-2021-when__date {
+        padding-top: 1.6vw;
+        font-size: 4.7vw; }
+      .halloween-2021-when__title {
+        margin-top: 1.1vw;
+        font-size: 5vw; }
+      .halloween-2021-when__poster {
+        margin-top: 3.6vw;
+        width: 26vw; } }
